--- a/android/ijkplayer/ijkplayer-example/src/main/res/values/strings.xml
+++ b/android/ijkplayer/ijkplayer-example/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="settings">Settings</string>
     <string name="tracks">Tracks</string>
     <string name="toggle_player">Player</string>
+    <string name="toggle_snapshot">Snapshot</string>
     <string name="toggle_render">Render</string>
     <string name="toggle_ratio">Scale</string>
     <string name="show_info">Info</string>
